--- a/dmarket.bib
+++ b/dmarket.bib
@@ -1,6 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
+@techreport{levitt2016heads,
+  title={Heads or Tails: The Impact of a Coin Toss on Major Life Decisions and Subsequent Happiness},
+  author={Levitt, Steven D},
+  year={2016},
+  institution={National Bureau of Economic Research}
+}
+
+@article{simon1961aggregation,
+  title={Aggregation of variables in dynamic systems},
+  author={Simon, Herbert A and Ando, Albert},
+  journal={Econometrica: journal of the Econometric Society},
+  pages={111--138},
+  year={1961},
+  publisher={JSTOR}
+}
+
 @article{syrgkanis2016efficient,
   title={Efficient Algorithms for Adversarial Contextual Learning},
   author={Syrgkanis, Vasilis and Krishnamurthy, Akshay and Schapire, Robert E},
@@ -381,6 +397,14 @@
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2764468.2764525},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2764468.2764525}}
 
+
+@article{mansour2016bayesian,
+  title={Bayesian Exploration: Incentivizing Exploration in Bayesian Games},
+  author={Mansour, Yishay and Slivkins, Aleksandrs and Syrgkanis, Vasilis and Wu, Zhiwei Steven},
+  journal={arXiv preprint arXiv:1602.07570},
+  year={2016}
+}
+
 @inproceedings{mansour2015bayesian,
 	Author = {Mansour, Yishay and Slivkins, Aleksandrs and Syrgkanis, Vasilis},
 	Booktitle = {Proceedings of the Sixteenth ACM Conference on Economics and Computation},
@@ -388,6 +412,29 @@
 	Pages = {565--582},
 	Title = {Bayesian incentive-compatible bandit exploration},
 	Year = {2015}}
+
+@article{kremer2014implementing,
+  title={Implementing the “Wisdom of the Crowd”},
+  author={Kremer, Ilan and Mansour, Yishay and Perry, Motty},
+  journal={Journal of Political Economy},
+  volume={122},
+  number={5},
+  pages={988--1012},
+  year={2014},
+  publisher={JSTOR}
+}
+
+@article{kremer2002information,
+  title={Information aggregation in common value auctions},
+  author={Kremer, Ilan},
+  journal={Econometrica},
+  volume={70},
+  number={4},
+  pages={1675--1682},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
 
 @article{dreber2015using,
 	Author = {Dreber, Anna and Pfeiffer, Thomas and Almenberg, Johan and Isaksson, Siri and Wilson, Brad and Chen, Yiling and Nosek, Brian A and Johannesson, Magnus},
